--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -33,6 +33,7 @@ android {
         applicationId "com.example.flutter_appp"
         minSdkVersion 16
         targetSdkVersion 30
+        multiDexEnabled true
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
@@ -48,4 +49,8 @@ android {
 
 flutter {
     source '../..'
+}
+
+dependencies{
+    implementation 'com.android.support:multidex:1.0.3'
 }
