--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   firebase_auth: "1.1.3"
   flutter_bloc: ^7.0.0
   equatable: ^1.2.5
-
+  google_sign_in: ^4.5.6
+  provider: ^5.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
