--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_auth: "1.1.3"
   flutter_bloc: ^7.0.0
   equatable: ^1.2.5
+  firebase_crashlytics: "^2.0.4"
 
 dev_dependencies:
   flutter_test:
