--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -49,3 +49,7 @@ android {
 flutter {
     source '../..'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
