--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_bloc: ^7.0.0
   equatable: ^1.2.5
   firebase_crashlytics: "^2.0.4"
+  google_sign_in: ^4.5.6
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
