--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,9 @@ dependencies:
   equatable: ^1.2.5
   firebase_crashlytics: "^2.0.4"
   google_sign_in: ^4.5.6
+  enum_to_string: ^1.0.14
   provider: ^5.0.0
+  cloud_firestore: ^2.2.0
 
 dev_dependencies:
   flutter_test:
